fix(detail scrollbar): fix scrollbar on detail page
Set the sidenav-container's overflow-y attribute to auto.
Set the sidenav-content's height to auto and min-height to 100%.

--- a/client/src/app/components/posts/detail.component.css
+++ b/client/src/app/components/posts/detail.component.css
@@ -1,5 +1,6 @@
 mat-sidenav-container {
     background-color: white;
+    overflow-y: auto;
 }
 
 .detail-sidenav-menu {
@@ -30,7 +31,7 @@ mat-sidenav-container {
     padding: 0 2em;
 }
 
-.detail-sidenav-menu .menu .search form {
+.detail-sidenav-menu .menu .search .form-search{
     width: 70%;
     margin: auto;
     margin-top: 0.5em;
@@ -94,4 +95,6 @@ mat-sidenav-container {
 
 .detail-sidenav-content {
     margin: 1em;
+    height: auto;
+    min-height: 100%;
 }
